examples/negative/parse_errors/L1/reserved_type.ob
MODULE Reserved;

VAR TYPE: INTEGER;

END Reserved.
